--- a/ultrablank/style.css
+++ b/ultrablank/style.css
@@ -6,7 +6,7 @@ Description: Ultra Blank theme
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: white, yellow, purple
+Tags: white, gray
 Text Domain: blank
 */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
